<resources>
    <string name="app_name">1365 Volunteer</string>
    <string name="version_number">1.3</string>
    <string name="email_address">g6y116@naver.com</string>

    <string name="toolbar_home">Volunteer</string>
    <string name="toolbar_bookmark">Bookmark</string>
    <string name="toolbar_more">More</string>
    <string name="toolbar_detail">Detail</string>

    <string name="all">All</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>

    <!-- home fragment -->
    <string name="chip_area">Area</string>
    <string name="chip_area_all">All</string>
    <string name="chip_start_date">Start</string>
    <string name="chip_end_date">End</string>
    <string name="chip_type">Type</string>
    <string name="chip_type_all">All</string>
    <string name="chip_type_adult">Adult</string>
    <string name="chip_type_young">Young</string>
    <string name="chip_state">State</string>
    <string name="chip_state_all">All</string>
    <string name="chip_state_todo">Todo</string>
    <string name="chip_state_doing">Doing</string>
    <string name="chip_state_done">Done</string>
    <string name="chip_reset">Reset</string>

    <!-- more fragment -->
    <string name="language">Language</string>
    <string name="language_ko">Korean</string>
    <string name="language_en">English</string>
    <string name="theme">Theme</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="visit">Visit History</string>
    <string name="visit_visible">Visible</string>
    <string name="visit_invisible">Invisible</string>
    <string name="visit_delete">Delete History</string>
    <string name="msg_visit_delete">Are you sure delete it?</string>
    <string name="email">Email</string>
    <string name="version">Version</string>

    <!-- detail fragment -->
    <string name="host">Host</string>
    <string name="area">Area</string>
    <string name="place">Place</string>
    <string name="person">Person</string>
    <string name="type">Type</string>
    <string name="notice_period">Recruitment</string>
    <string name="volunteer_period">Volunteer Period</string>
    <string name="volunteer_time">Volunteer Time</string>
    <string name="manager">Manager</string>
    <string name="tel">Tel</string>
    <string name="map">Map</string>

    <!-- etc -->
    <string name="date_form_short">%s/%s</string>
    <string name="date_form">%s/%s ~ %s/%s</string>
    <string name="time_form">%s ~ %s</string>
    <string name="msg_bookmark_empty">There are no bookmarks.</string>
    <string name="msg_volunteer_deleted">This volunteer has been deleted.</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="delete_bookmark">Delete Bookmark</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>