<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="g6y116.volunteer.viewmodel.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <androidx.cardview.widget.CardView
            android:id="@+id/localeCardView"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/localeLayout"
                android:paddingVertical="@dimen/padding_small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ripple">

                <TextView
                    android:id="@+id/localeTv"
                    style="@style/medium_text"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/localeTvSub"/>

                <TextView
                    android:id="@+id/localeTvSub"
                    style="@style/small_light_text"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/language_ko"
                    app:layout_constraintTop_toBottomOf="@+id/localeTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/modeLayout"
                android:paddingVertical="@dimen/padding_small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ripple">

                <TextView
                    android:id="@+id/modeTv"
                    style="@style/medium_text"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/modeTvSub"/>

                <TextView
                    android:id="@+id/modeTvSub"
                    style="@style/small_light_text"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/theme_system"
                    app:layout_constraintTop_toBottomOf="@+id/modeTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/readLayout"
                android:paddingVertical="@dimen/padding_small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ripple">

                <TextView
                    android:id="@+id/readTv"
                    style="@style/medium_text"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/readTvSub"/>

                <TextView
                    android:id="@+id/readTvSub"
                    style="@style/small_light_text"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visit_visible"
                    app:layout_constraintTop_toBottomOf="@+id/readTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/margin_extra_small"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingVertical="@dimen/padding_small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ripple">

                <TextView
                    android:id="@+id/emailTv"
                    style="@style/medium_text"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/emailTvSub"/>

                <TextView
                    android:id="@+id/emailTvSub"
                    style="@style/small_light_text"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    app:layout_constraintTop_toBottomOf="@+id/emailTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/margin_extra_small"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingVertical="@dimen/padding_small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ripple">

                <TextView
                    android:id="@+id/versionTv"
                    style="@style/medium_text"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/versionTvSub"/>

                <TextView
                    android:id="@+id/versionTvSub"
                    style="@style/small_light_text"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/version_number"
                    app:layout_constraintTop_toBottomOf="@+id/versionTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>